# jaya

./: .gitignore  .prettierrc.json  Cargo.toml  askama.toml  build.rs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
config/: Cargo.toml
config/src/: lib.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs
public/css/: tailwind.css
src/: main.rs
src/controllers/: home.rs  home_controller.rs  mod.rs  post.rs  post_controller.rs  user.rs
src/data/: post.rs
src/model/: post.rs
src/resources/assets/: another.ts  main.ts
src/resources/views/: index.html  post.html
src/resources/views/layouts/: auth.html  base.html  dashboard.html
src/resources/views/pages/: index.html
src/resources/views/pages/post/: create.html  edit.html  index.html  show.html
src/resources/views/pages/user/: index.html
src/resources/views/partials/: header.html  navigation.html  sidebar.html
src/resources/views/post/: create.html  edit.html  show.html
src/routes/: api.rs  mod.rs  web.rs
src/styles/: tailwind.css
system/: Cargo.toml
system/src/: error.rs  lib.rs  utils.rs
system/templates/: error.html
