[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }
serde.workspace = true
serde_json.workspace = true
